--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
-/node_modules
+*node_modules
+
 /media/to_process/*
 /media/processed/*
+
+.DS_Store
+Thumbs.db
+
+
+# WEB ANGULAR FILES
+
+# compiled output
+/interface/web/dist
+/interface/web/tmp
+/interface/web/out-tsc
+# dependencies
+/interface/web/node_modules
+
+# profiling files
+/interface/webchrome-profiler-events*.json
+/interface/webspeed-measure-plugin*.json
