--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node dist/index.js"
+    "test": "node dist/index.js",
+    "server": "node dist/server/index.js",
+    "web": "cd ./interface/web; npm run start"
   },
   "author": "Jorge Arreola",
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
-    "@types/node": "^14.0.14"
+    "@types/node": "^14.0.14",
+    "express": "^4.17.1"
   }
 }
