POR FINNN IJUESUPUTAMADRE
A ver, que la cosa esta esperaba recibir un jodido json y yo le mandaba texto plano con tal de probar
Falta ajustar la ruta de la api, pero al menos ya pude hacer que en el desarrollo se pueda conectar el frontend con el server, alch
1:47 am
wu

--- a/interface/web/proxyconfig.json
+++ b/interface/web/proxyconfig.json
@@ -1,6 +1,6 @@
 {
-    "/api/*": {
-        "target": "http://localhost:1234/api/",
+    "/api": {
+        "target": "http://localhost:1234/api",
         "secure": true,
         "changeOrigin": true,
         "logLevel": "debug"
