--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {},
   "dependencies": {
     "@types/node": "^14.0.14",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4"
   }
 }
