--- a/interface/web/angular.json
+++ b/interface/web/angular.json
@@ -117,6 +117,10 @@
               "devServerTarget": "web:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
