Va super genial
Funcionando
ya se hacen las primeras interacciones entre la web y el servidor para procesar la imagen de onda de audio. Se viene bueno

--- a/interface/web/proxyconfig.json
+++ b/interface/web/proxyconfig.json
@@ -8,5 +8,15 @@
             "^/api": ""
           }
         
+    },
+    "/media/*": {
+        "target": "http://localhost:1234/media",
+        "secure": false,
+        "changeOrigin": true,
+        "logLevel": "debug",
+        "pathRewrite": {
+            "^/media": ""
+          }
+        
     }
 }
