--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
+    "@types/express": "^4.17.7",
     "@types/node": "^14.0.14",
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
