--- a/interface/web/tsconfig.app.json
+++ b/interface/web/tsconfig.app.json
@@ -6,9 +6,11 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    "../../src/FilterChain.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "../../src/FilterChain.ts"
   ]
 }
