--- a/interface/web/package.json
+++ b/interface/web/package.json
@@ -26,6 +26,8 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
     "firebase": "^7.13.1",
+    "modal": "^1.2.0",
+    "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
