--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.14",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.8",
     "nodemon": "^2.0.4"
   }
 }
