--- a/interface/web/package.json
+++ b/interface/web/package.json
@@ -25,7 +25,7 @@
     "@angular/router": "~10.0.3",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
-    "firebase": "^7.13.1",
+    "material-design-icons": "^3.0.1",
     "modal": "^1.2.0",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.6.0",
@@ -42,7 +42,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.53",
     "codelyzer": "^5.1.2",
-    "firebase-tools": "^8.0.0",
+    "firebase-tools": "^8.7.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
