--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
+    "@google-cloud/storage": "^5.1.2",
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.14",
+    "@types/uuid": "^8.0.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.8",
-    "nodemon": "^2.0.4"
+    "firebase-admin": "^9.0.0",
+    "nodemon": "^2.0.4",
+    "uuid": "^8.3.0"
   }
 }
