Componente de almacenamiento funcionando!
Ahora puedes gestionar el almacenamiento de archivos localmente, y subir y bajar archivos de firebase storage. Un gran paso para el trabajo colaborativo en el desarrollo de filtros!
Solo falta terminar la función de procesar los filtros y verlos reflejados en la web para terminar la primera build oficial del programa de creación de filtros. "se viene" diría el pavel

--- a/interface/web/package.json
+++ b/interface/web/package.json
@@ -11,36 +11,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.3",
-    "@angular/cdk": "^10.1.0",
-    "@angular/common": "~10.0.3",
-    "@angular/compiler": "~10.0.3",
-    "@angular/core": "~10.0.3",
+    "@angular/animations": "^10.0.8",
+    "@angular/cdk": "^10.1.2",
+    "@angular/common": "^10.0.8",
+    "@angular/compiler": "^10.0.8",
+    "@angular/core": "^10.0.8",
     "@angular/fire": "^6.0.2",
-    "@angular/forms": "~10.0.3",
-    "@angular/localize": "~10.0.3",
-    "@angular/material": "^10.1.0",
-    "@angular/platform-browser": "~10.0.3",
-    "@angular/platform-browser-dynamic": "~10.0.3",
-    "@angular/router": "~10.0.3",
+    "@angular/forms": "^10.0.8",
+    "@angular/localize": "^10.0.8",
+    "@angular/material": "^10.1.2",
+    "@angular/platform-browser": "^10.0.8",
+    "@angular/platform-browser-dynamic": "^10.0.8",
+    "@angular/router": "^10.0.8",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.2",
+    "dot-prop": "^5.2.0",
+    "firebase": "^7.17.2",
+    "jquery": "^3.5.1",
     "material-design-icons": "^3.0.1",
     "modal": "^1.2.0",
     "ngx-bootstrap": "^5.6.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "popper.js": "^1.16.1",
+    "rxjs": "^6.6.2",
+    "tslib": "^2.0.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": ">= 0.900 < 0.1100",
-    "@angular-devkit/build-angular": "~0.1000.1",
-    "@angular/cli": "~10.0.1",
-    "@angular/compiler-cli": "~10.0.3",
-    "@angular/language-service": "~10.0.3",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/architect": "^0.1000.5",
+    "@angular-devkit/build-angular": "^0.1000.5",
+    "@angular/cli": "^10.0.5",
+    "@angular/compiler-cli": "^10.0.8",
+    "@angular/language-service": "^10.0.8",
+    "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.53",
+    "@types/node": "^12.12.54",
     "codelyzer": "^5.1.2",
     "firebase-tools": "^8.7.0",
     "fuzzy": "^0.1.3",
@@ -53,10 +57,10 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "open": "^7.0.3",
+    "open": "^7.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.6"
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7"
   }
 }
